--- a/digipal_project/templates/pages/record_characters.html
+++ b/digipal_project/templates/pages/record_characters.html
@@ -112,7 +112,7 @@
                       {% if code.annotations.items|length > 0 %}
                         {% for text_xml, segments in code.annotations.items %}
                           <span class="list-group-item">
-                            <a href="{{ text_xml.get_absolute_url }}">
+                            <a href="{{ text_xml.get_absolute_url }}" target="_blank">
                               {{ text_xml.text_content.text.title }}
                               ({{ text_xml.text_content.type|lower }})
                             </a>
@@ -122,7 +122,7 @@
                                 <table>
                                   <tr>
                                     <td>
-                                      <a href="{{ text_xml.get_absolute_url }}">
+                                      <a href="{{ segment.url }}" target="_blank">
                                         {{ segment.content }}
                                       </a>
                                     </td>
@@ -135,7 +135,7 @@
                                       {% if segment.in_relation_with|length > 0 %}
                                         With:
                                           {% for relation in segment.in_relation_with %}
-                                            <a href="{{ relation.get_absolute_url }}">
+                                            <a href="{{ relation.get_absolute_url }}" target="_blank">
                                               {{ relation.name }}
                                             </a>
                                             {% if forloop.counter != segment.in_relation_with|length %} ; {% endif %}
@@ -143,7 +143,7 @@
                                       {% endif %}
                                       {% if segment.place %}
                                         Where:
-                                          <a href="{{ segment.place.get_absolute_url }}">
+                                          <a href="{{ segment.place.get_absolute_url }}" target="_blank">
                                             {{ segment.place.name }}
                                           </a>
                                       {% endif %}
