--- a/digipal_project/templates/pages/record_scribes.html
+++ b/digipal_project/templates/pages/record_scribes.html
@@ -75,6 +75,12 @@
                 <dl class="bs dl-horizontal">
                     <dt>Date</dt>
                     <dd>{{ scribe.date }}</dd>
+                    {% comment %}
+                      --------------------------------------------
+                      BONHUM - Changed 'Scriptorium' to 'Workshop'
+                      --------------------------------------------
+                      <dt>Scriptorium</dt>
+                    {% endcomment %}
                     <dt>Workshop</dt>
                     <dd>{{ scribe.scriptorium }}</dd>
                 </dl>
