--- a/digipal_project/templates/pages/record_manuscripts.html
+++ b/digipal_project/templates/pages/record_manuscripts.html
@@ -16,12 +16,20 @@
 
 {% block record_tabs %}
     <li class="{% if not tabid %}active in{% endif %}">
-        <a href="{{ item_part.get_absolute_url }}" data-address-bar="1" data-target="#data" data-toggle="tab">Information</a></li>
-    <li class="{% if tabid == "descriptions" %}active in{% endif %} {% if item_part.historical_item.description_set.count > 0 %}{% else %}disabled{% endif %}">
-        <a href="{{ item_part.get_absolute_url }}descriptions/"  data-address-bar="1" data-target="#descriptions" data-toggle="tab">Descriptions ({{ item_part.historical_item.description_set.count }})</a></li>
+        <a href="{{ item_part.get_absolute_url }}" data-address-bar="1" data-target="#data" data-toggle="tab">Information</a>
+    </li>
+    {% comment %}
+      --------------------------------------------------------------------
+      BONHUM - Changed 'description_set.count' to 'description_set|length'
+      --------------------------------------------------------------------
+    {% endcomment %}
+    <li class="{% if tabid == "descriptions" %}active in{% endif %} {% if item_part.historical_item.description_set|length > 0 %}{% else %}disabled{% endif %}">
+        <a href="{{ item_part.get_absolute_url }}descriptions/"  data-address-bar="1" data-target="#descriptions" data-toggle="tab">Descriptions ({{ item_part.historical_item.description_set|length }})</a>
+    </li>
     {% if cansee.image %}
         <li class="{% if tabid == "pages" %}active in{% endif %} {% if images.count > 0 %}{% else %}disabled{% endif %}">
-            <a href="{{ item_part.get_absolute_url }}pages/" data-address-bar="1" data-target="#pages" data-toggle="tab">Manuscript Images ({{ images.count }})</a></li>
+            <a href="{{ item_part.get_absolute_url }}pages/" data-address-bar="1" data-target="#pages" data-toggle="tab">Manuscript Images ({{ images.count }})</a>
+        </li>
     {% endif %}
     {% comment %}
       --------------------------
@@ -29,12 +37,14 @@
       --------------------------
       {% if cansee.hand %}
           <li class="{% if tabid == "hands" %}active in{% endif %} {% if hands.count > 0 %}{% else %}disabled{% endif %}">
-              <a href="{{ item_part.get_absolute_url }}hands/" data-address-bar="1" data-target="#hands" data-toggle="tab">Hands ({{ hands.count }})</a></li>
+              <a href="{{ item_part.get_absolute_url }}hands/" data-address-bar="1" data-target="#hands" data-toggle="tab">Hands ({{ hands.count }})</a>
+          </li>
       {% endif %}
     {% endcomment %}
     {% if cansee.textcontentxml %}
         <li class="{% if tabid == "texts" %}active in{% endif %} {% if text_content_xmls.count > 0 %}{% else %}disabled{% endif %}">
-            <a href="{{ item_part.get_absolute_url }}texts/" data-address-bar="1" data-target="#texts" data-toggle="tab">Texts ({{ text_content_xmls.count }})</a></li>
+            <a href="{{ item_part.get_absolute_url }}texts/" data-address-bar="1" data-target="#texts" data-toggle="tab">Texts ({{ text_content_xmls.count }})</a>
+        </li>
     {% endif %}
 {% endblock %}
 
