Changed url of images in text viewer.

--- a/digipal_project/templates/digipal_text/text_viewer_images_section.html
+++ b/digipal_project/templates/digipal_text/text_viewer_images_section.html
@@ -2,7 +2,7 @@
     <div class="centered">
         <div class="panel panel-thumb">
             <span class="folio-image-wrapper">
-                {{ image.thumbnail }}
+                <a href="{{ image.url }}" target="_blank">{{ image.thumbnail }}</a>
                 <br><br>
                 <span>
                   {% if image.locus %}
